--- a/Bootstrap5MultiSelectExample/Pages/Index.cshtml
+++ b/Bootstrap5MultiSelectExample/Pages/Index.cshtml
@@ -1,29 +1,29 @@
 ﻿@page
+@using Bootstrap5MultiSelectExample.Classes
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
-
-
 
 <div class="container">
     <div class="position-absolute top-50 start-50 translate-middle">
         <form method="post">
 
             <input type="hidden" asp-for="PizzaToppings" id="PizzaToppingsValue"/>
+            <input type="hidden" asp-for="AllCondimentSelected" id="areAllSelected" />
 
             <fieldset class="border border-danger border-opacity-25 p-3 text-primary">
 
                 <legend class="float-none w-auto fs-6">Pizza tops</legend>
 
                 <select id="select-tops-options" multiple="multiple">
-                    <option value="1">Cheese</option>
-                    <option value="2">Tomatoes</option>
-                    <option value="3">Mozzarella</option>
-                    <option value="4">Mushrooms</option>
-                    <option value="5">anchovies</option>
-                    <option value="6">Pepperoni</option>
-                    <option value="7">Onions</option>
+                    @{
+                        foreach (var condiment in MockedData.Condiments())
+                        {
+                            <option value="@condiment.Value">@condiment.Name</option>
+                        }
+                    }
                 </select>
 
                 <div>
@@ -54,6 +54,13 @@
                     numberDisplayed: 5,
                     buttonWidth: '18em',
                     includeSelectAllOption: true,
+                    onSelectAll: function(options) {
+                        document.getElementById("areAllSelected").value = true;
+                        
+                    },
+                    onDeselectAll: function (options) {
+                        document.getElementById("areAllSelected").value = false;
+                    },
                     //includeResetOption: true,
                     //selectAllName: 'select-all-name',
                     onChange: function(element, checked) {
@@ -67,35 +74,16 @@
                     templates: {
                         button: 
                             '<button type="button" class="multiselect dropdown-toggle" ' +
-                            'data-bs-toggle="dropdown"><span class="multiselect-selected-text"></span></button>',
+                                'data-bs-toggle="dropdown"><span class="multiselect-selected-text"></span></button>',
                         resetButton: '<div class="multiselect-reset text-center p-2"><button type="button" class="btn btn-sm btn-danger"></button></div>'
                     }
                 });
 
             });
 
-        //document.getElementById("resultsButton").addEventListener("click",
-        //    function() {
 
-        //        //document.getElementsByClassName("multiselect-selected-text")[0].innerHTML.split(',').map(i => { return i; }).join(', ')
-
-        //        if (document.getElementsByClassName("multiselect-selected-text")[0].innerHTML !== 'Select toppings') {
-        //            var items = $('#select-tops-options option:selected').map(function(a, item) { return item.value; });
-
-        //            for (var index = 0; index < items.length; index++) {
-        //                console.log(items[index]);
-        //            }
-
-        //            document.getElementById("foot").innerHTML = `<strong>Selected</strong><span class='text-danger'>
-        //                        ${document.getElementsByClassName("multiselect")[0].title}</span>`;                    
-        //        } else {
-        //            document.getElementById("foot").innerHTML = "<span class='text-danger fw-bold'>Please make your selections</span>";
-        //        }
-
-        //    });
 
         $('form').submit(function (e) {
-
             if (document.getElementsByClassName("multiselect-selected-text")[0].innerHTML !== 'Select toppings') {
                 document.getElementById("foot").innerHTML = `<strong>Selected</strong><span class='text-danger'>
                             ${document.getElementsByClassName("multiselect")[0].title}</span>`;                    
