--- a/Bootstrap5MultiSelectExample/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5MultiSelectExample/Pages/Shared/_Layout.cshtml
@@ -22,9 +22,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -37,9 +34,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div id="foot" class="container text-center">
-            
-        </div>
+        <div id="foot" class="container text-center"></div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
