--- a/Bootstrap5MultiSelectExample/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5MultiSelectExample/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Dialog1">Modal</a>
+                        </li>
                     </ul>
                 </div>
             </div>
