--- a/Bootstrap5MultiSelectExample/Pages/Dialog1.cshtml
+++ b/Bootstrap5MultiSelectExample/Pages/Dialog1.cshtml
@@ -11,7 +11,13 @@
     </div>
 </div>
 
-<div class="modal fade" id="mi-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" 
+     id="mi-modal" 
+     tabindex="-1" 
+     data-bs-backdrop="static" 
+     data-bs-keyboard="false"
+     aria-labelledby="exampleModalLabel" 
+     aria-hidden="true">
 
     <div class="modal-dialog modal-dialog-centered">
 
