--- a/Bootstrap5ToastExample/Pages/Privacy.cshtml
+++ b/Bootstrap5ToastExample/Pages/Privacy.cshtml
@@ -27,8 +27,7 @@
             </div>
         </div>   
         
-        <div class="toast text-white bg-danger border-0" id="bottomToast" role="alert"
-             aria-live="assertive" aria-atomic="true">
+        <div class="toast text-white bg-danger border-0" id="bottomToast" role="alert" aria-live="assertive" aria-atomic="true">
 
             <div class="d-flex">
                 <div class="toast-body">
