--- a/Bootstrap5FloatingLabelsExample/Pages/Index.cshtml
+++ b/Bootstrap5FloatingLabelsExample/Pages/Index.cshtml
@@ -27,7 +27,7 @@
 
     <h3>@ViewData["sentence"]</h3>
 
-    <form class="form-group" method="post" id="currentForm" autocomplete="on">
+    <form method="post" id="currentForm" autocomplete="on">
         <input type="hidden" asp-for="UseAutoComplete" id="useAutoComplete" />
 
 
