--- a/Bootstrap5ModalExample/Pages/Dialog1.cshtml
+++ b/Bootstrap5ModalExample/Pages/Dialog1.cshtml
@@ -79,7 +79,8 @@ Made glorious summer by this sun of York;
                 document.getElementById("acceptedFlag").value = false;
             }
 
-            $('#messageForm').submit();
+            document.getElementById("messageForm").submit();
+
         });
 
     </script>
