--- a/Bootstrap5ModalExample/Pages/Index.cshtml
+++ b/Bootstrap5ModalExample/Pages/Index.cshtml
@@ -19,7 +19,7 @@
     <input type="submit" value="Post" role="button" class="btn btn-primary mt-2 w-100" />
 </form>
 
-<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="question-dialog" aria-hidden="true" id="mi-modal">
+<div class="modal fade" tabindex="-1" role="dialog" data-bs-backdrop="static" aria-labelledby="question-dialog" aria-hidden="true" id="mi-modal">
     <div class="modal-dialog modal-sm modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
