--- a/Bootstrap5ModalExample/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5ModalExample/Pages/Shared/_Layout.cshtml
@@ -25,10 +25,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Dialog1">Form</a>
                         </li>
+                        
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ScrollingPage">Scrolling</a>
+                        </li>
                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+
                     </ul>
                 </div>
             </div>
