more modal samples

--- a/Bootstrap5ModalExample/Pages/ScrollingPage.cshtml
+++ b/Bootstrap5ModalExample/Pages/ScrollingPage.cshtml
@@ -2,7 +2,7 @@
 @model Bootstrap5ModalExample.Pages.ScrollingPageModel
 @{
 }
-<div class="container mt-3">
+<div class="container mt-3" id="main-content">
     <h2>Modal Scroll Example</h2>
     <p>Click on the button to open the modal.</p>
 
