--- a/Bootstrap5ModalExample/Pages/Dialog1.cshtml
+++ b/Bootstrap5ModalExample/Pages/Dialog1.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<div class="container">
+<div class="container" id="main-content">
     <div class="row">
         <button class="btn btn-primary w-25" id="btn-confirm">Send message</button>
     </div>
