--- a/Bootstrap5ModalExample/Pages/Index.cshtml
+++ b/Bootstrap5ModalExample/Pages/Index.cshtml
@@ -8,7 +8,7 @@
     Code sample for a Bootstrap modal to ask a question centered <span class="badge rounded-pill bg-primary">vertically</span>
 </div>
 
-<div class="container">
+<div class="container" id="main-content">
     <div class="row">
         <button class="btn btn-primary w-25" id="btn-confirm">Confirm</button>
     </div>
