--- a/Bootstrap5ModalExample/Pages/Login1.cshtml
+++ b/Bootstrap5ModalExample/Pages/Login1.cshtml
@@ -4,37 +4,39 @@
 }
 <div class="container">
 
-    <div class="container">
-        <h1 class="fs-5">Log In Demo</h1>
-        <button type='button' id="btn-confirm" class="btn btn-primary" data-toggle="modal" >Open Log In Window</button>
-  
-        <div class="modal" id="mi-modal" data-bs-backdrop="static">
+    <div class="container" id="main-content">
+
+        <h1 class="fs-5">Log In with password</h1>
+
+        <button type='button' id="btn-confirm" class="btn btn-primary" data-toggle="modal">Open Log In Window</button>
+
+        <div class="modal" id="mi-modal" data-bs-backdrop="static" aria-labelledby="loginModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
 
                     <div class="modal-header">
-@*                        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>*@
+                        <h2 class="modal-title fw-bold" id="loginModalLabel">Enter your credentials</h2>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
 
                     <div class="modal-body">
                         <form role="form">
-                            
-                                <div class="">
-                                    <label class="form-label" for="userName">User name</label>
-                                    <div class="input-group mb-3">
-                                        <input class="form-control" id="userName" class="mt-1" type="text" name="userName" value="billybob" required />
-                                    </div>
+
+                            <div class="">
+                                <label class="form-label" for="userName">User name</label>
+                                <div class="input-group mb-3">
+                                    <input class="form-control" id="userName" class="mt-1" type="text" name="userName" value="billybob" required/>
                                 </div>
-                                <div class="">
-                                    <label class="form-label" for="password">Password</label>
-                                    <div class="input-group">
-                                        <input class="form-control password w-75" id="password" class="mt-1" type="password" name="password" value="secret!" required/>
-                                        <span class="input-group-text togglePassword" id="">
-                                            <i data-feather="eye" style="cursor: pointer"></i>
-                                        </span>
-                                    </div>
+                            </div>
+                            <div class="">
+                                <label class="form-label" for="password">Password</label>
+                                <div class="input-group">
+                                    <input class="form-control password w-75" id="password" class="mt-1" type="password" name="password" value="secret!" required/>
+                                    <span class="input-group-text togglePassword" id="">
+                                        <i data-feather="eye" style="cursor: pointer"></i>
+                                    </span>
                                 </div>
+                            </div>
 
                         </form>
                     </div>
@@ -43,7 +45,7 @@
                         <button type="button" class="btn btn-secondary" id="modal-btn-no">Cancel</button>
                         <button id="modal-btn-yes" class="btn btn-primary">Log In</button>
                     </div>
-        
+
                 </div>
             </div>
         </div>
@@ -78,10 +80,15 @@
                 console.log(document.getElementById("userName").value);
                 console.log(document.getElementById("password").value);
             } else {
+                console.log('cancelled');
             }
 
             //document.getElementById("messageForm").submit();
 
+        });
+
+        $("#mi-modal").on("hidden.bs.modal", function () {
+            console.log('cancelled via close X button');
         });
 
         feather.replace({ 'aria-hidden': 'true' });
