--- a/Bootstrap5ModalExample/wwwroot/css/site.css
+++ b/Bootstrap5ModalExample/wwwroot/css/site.css
@@ -28,3 +28,48 @@ body {
 .togglePassword {
 
 }
+
+.input-numeral {
+    /* seems the author of cleaves did not expose this*/
+    
+}
+
+.input-element {
+
+}
+
+.skip-link {
+    position: absolute;
+    left: -999px;
+    width: 1px;
+    height: 1px;
+    top: auto;
+}
+
+.skip-link:active, .skip-link:focus {
+    background-color: cornflowerblue;
+    color: black;
+    display: inline-block;
+    height: auto;
+    width: auto;
+    position: static;
+    padding: 1em 1em;
+    text-decoration: none;
+    margin: auto;
+}
+
+.skiplink {
+    position: absolute;
+    left: 5px;
+    top: 0;
+    transform: translateY(-100%);
+    transition: transform 0.3s;
+    background: white;
+    color: black;
+    padding: 20px;
+}
+
+.skiplink:focus {
+    transform: translateY(0);
+    color: black;
+}
