--- a/Bootstrap5MultiSelectExample/Pages/Index.cshtml
+++ b/Bootstrap5MultiSelectExample/Pages/Index.cshtml
@@ -4,6 +4,7 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
+    ViewData["message"] = "Hey";
 }
 
 <link href="~/lib/limonte-sweetalert2/sweetalert2.min.css" rel="stylesheet" />
