--- a/Bootstrap5ModalExample/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5ModalExample/Pages/Shared/_Layout.cshtml
@@ -47,11 +47,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Login2">Pin</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/MultipleInputs">MultipleInputs</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
-
+                        
                     </ul>
                 </div>
             </div>
