--- a/Bootstrap5ProgressBarExample/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5ProgressBarExample/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/StandardPage">Example 1</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RealPage">Via code</a>
+                        </li>
                     </ul>
                 </div>
             </div>
