--- a/Bootstrap5ModalExample/Pages/Privacy.cshtml
+++ b/Bootstrap5ModalExample/Pages/Privacy.cshtml
@@ -11,7 +11,7 @@
             data-bs-toggle="collapse"
             data-bs-target="#collapseExample"
             aria-expanded="false"
-            aria-label="Example"
+            aria-label="read about bootstrap collapse"
             aria-description="for Bootstrap collapse to provide a read more functionality"
             aria-controls="collapseExample">
         Read more
